--- a/love/Love.html
+++ b/love/Love.html
@@ -40,25 +40,16 @@
 			<script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
 			<script src="/follow.js" type="text/javascript"></script>
 		</div>
-		<iframe frameborder="0" scrolling="no" src="elephant.html" width="100%" height="500px"></iframe>
+		<iframe frameborder="0" scrolling="no" src="elephant.html" width="100%" height="400px"></iframe>
 
-		<div data-options="region:'north',border:false" style="padding-top: 20px;">
-			<div style="float: left;width: 50%;">
-				<divstyle= style="float: right;margin-right: 20px; text-align: center;">
-					<p>
-						<a href="tree.html" class="dow">我的大宝贝 </a>
-					</p>
-				</div>
-			</div>
+		<div style="t">
+			<a style="text-align: center;" href="tree.html" class="dow">我的大宝贝 </a>
+		</div>
 
-			<div  style="float: right;width: 50%; ">
-				<div style="float: left;margin-left: 20px;text-align: center;">
-					<div class="margin-bottom-20">
-						<a href="#" class="dow">我的小宝贝 </a>
-					</div>
-				</div>
-			</div>
-
+		<div style="margin-top: 10px;">
+				<a style="text-align: center;" href="tree.html" class="dow">我的小宝贝 </a>
+		</div>
+	
 	</body>
 
 </html>
