更换音乐 追光者

--- a/love/Love.html
+++ b/love/Love.html
@@ -42,14 +42,16 @@
 		</div>
 		<iframe frameborder="0" scrolling="no" src="elephant.html" width="100%" height="400px"></iframe>
 
-		<div style="t">
+		<div style="">
 			<a style="text-align: center;" href="tree.html" class="dow">我的大宝贝 </a>
 		</div>
 
 		<div style="margin-top: 10px;">
-				<a style="text-align: center;" href="tree.html" class="dow">我的小宝贝 </a>
+			<a style="text-align: center;" href="tree.html" class="dow">我的小宝贝 </a>
 		</div>
-	
+
+		<audio src="love.mp3" autoplay="autoplay"></audio>
+		<audio id="bgmMusic" src="./LoveYou.mp3" preload="auto" type="audio/mp3" autoplay="" loop=""></audio>
 	</body>
 
 </html>
